# OOPLabs

lab0/: Makefile  main.cpp  module2.cpp  module3.cpp  output_program
lab0b/: CMakeLists.txt  Makefile  a.out  input.txt
lab0b/include/: Reader.h  TextProcessor.h  WordFrequencyAnalyzer.h  Writer.h
lab0b/lib/: includes.h
lab0b/src/: Reader.cpp  TextProcessor.cpp  WordFrequencyAnalyzer.cpp  Writer.cpp  main.cpp
lab0b/tests/: expected.csv  input3.txt  input4.txt  punctuation.txt  test_main.cpp
